Fixing the home bg-img white space

--- a/styles.css
+++ b/styles.css
@@ -751,7 +751,7 @@ footer {
 }
 
 @media screen and (max-width: 23em) {
-  .home {
+  .home .bg-img {
     overflow-y: hidden;
   }
 
